--- a/catalogo.html
+++ b/catalogo.html
@@ -6,8 +6,8 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Document</title>
-      <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
-      <link rel="stylesheet" href="../style/style.css">
+      <link rel="stylesheet" href="./bootstrap-5.2.2-dist/css/bootstrap.css">
+      <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
@@ -17,19 +17,16 @@
                         <h2>
                               Loan art
                         </h2>
-                        <img class="logo" src="../Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png"
+                        <img class="logo" src="./Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png"
                               alt="logo">
                   </a>
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="nav justify-content-end ">
                               <li class="nav-item">
-                                    <a class="nav-link  colorA" href=".../index.html">Inicio</a>
+                                    <a class="nav-link colorA" href="./catalogo.html">inicio</a>
                               </li>
                               <li class="nav-item">
-                                    <a class="nav-link colorA" href="./catalogo.html">Catalogo</a>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link colorA" href="./carrito.html" id="enlaceCarrito">Carrito</a>
+                                    <a class="nav-link colorA" href="./pages/carrito.html" id="enlaceCarrito">Carrito</a>
                               </li>
                         </ul>
                   </div>
@@ -39,7 +36,7 @@
       <main class="content" id="mainCatalogo">
             <section class="section row justify-content-center">
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/15 Dias Mas.jpg" class="card-img-top"
+                        <img src="./Assets/Galeria/reescaladas/15 Dias Mas.jpg" class="card-img-top"
                               alt="...">
                         <div class="card-body">
                               <h5 class="card-title">15 dias mas</h5>
@@ -48,7 +45,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/Muerte Roja.jpg" class="card-img-top" alt="...">
+                        <img src="./Assets/Galeria/reescaladas/Muerte Roja.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">Muerte Roja</h5>
                               <p class="card-text">Precio: $15000</p>
@@ -56,7 +53,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/Demonios Internos.jpg" class="card-img-top"
+                        <img src="./Assets/Galeria/reescaladas/Demonios Internos.jpg" class="card-img-top"
                               alt="...">
                         <div class="card-body">
                               <h5 class="card-title">Demonios Internos</h5>
@@ -65,7 +62,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/Vampire Batman.jpg" class="card-img-top" alt="...">
+                        <img src="./Assets/Galeria/reescaladas/Vampire Batman.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">Vampire Batman</h5>
                               <p class="card-text">Precio: $15000</p>
@@ -75,7 +72,7 @@
             </section>
             <section class="section row justify-content-center">
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/The Hand.jpg" class="card-img-top" alt="...">
+                        <img src="./Assets/Galeria/reescaladas/The Hand.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">The hand</h5>
                               <p class="card-text">Precio: $9000</p>
@@ -83,7 +80,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/Pizza y Alcohol en Gel.jpg"
+                        <img src="./Assets/Galeria/reescaladas/Pizza y Alcohol en Gel.jpg"
                               class="card-img-top" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">Pizza y Alcohol en Gel</h5>
@@ -92,7 +89,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/Principe Prospero.jpg" class="card-img-top"
+                        <img src="./Assets/Galeria/reescaladas/Principe Prospero.jpg" class="card-img-top"
                               alt="...">
                         <div class="card-body">
                               <h5 class="card-title">Principe Prospero</h5>
@@ -101,7 +98,7 @@
                         </div>
                   </div>
                   <div class="card col-3  " style="width: 18rem;">
-                        <img src="../Assets/Galeria/reescaladas/The Old Men.jpg" class="card-img-top" alt="...">
+                        <img src="./Assets/Galeria/reescaladas/The Old Men.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                               <h5 class="card-title">The Old Men</h5>
                               <p class="card-text">Precio: $5000</p>
@@ -117,17 +114,16 @@
             </div>
             <div class="footer-section">
                   <a href="https://www.instagram.com/loan_art00/">
-                        <img src="../Assets/instagram icono.png" alt="Instagram">
+                        <img src="./Assets/instagram icono.png" alt="Instagram">
                   </a>
                   <a href="https://www.facebook.com/loan.arts.90">
-                        <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png" alt="Facebook">
+                        <img src="./Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png" alt="Facebook">
                   </a>
-            </div>
+            </div>      
       </footer>
 
-
-      <script src="../bootstrap-5.2.2-dist/js/bootstrap.js"></script>
-      <script src="../js/main.js"></script>
+      <script src="./bootstrap-5.2.2-dist/js/bootstrap.js"></script>
+      <script src="./js/main.js"></script>
 </body>
 
 </html>
