--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -13,7 +13,7 @@
 <body>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                  <a class="navbar-brand titulo_logo" href="../index.html">
+                  <a class="navbar-brand titulo_logo" href="../catalogo.html">
                         <h2>
                               Loan art
                         </h2>
@@ -23,10 +23,7 @@
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="nav justify-content-end ">
                               <li class="nav-item">
-                                    <a class="nav-link  colorA" href="../index.html">Inicio</a>
-                              </li>
-                              <li class="nav-item">
-                                    <a class="nav-link colorA" href="./catalogo.html">Catalogo</a>
+                                    <a class="nav-link colorA" href="../catalogo.html">inicio</a>
                               </li>
                               <li class="nav-item">
                                     <a class="nav-link colorA" href="./carrito.html">Carrito</a>
@@ -36,11 +33,8 @@
             </div>
       </nav>
 
-
       <main id="mainCarrito" class="mainCarrito">
-            
       </main>
-
 
       <footer class="footer">
             <div class="footer-section">
