--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                  <a class="navbar-brand titulo_logo" href=".../index.html">
+                  <a class="navbar-brand titulo_logo" href="./index.html">
                         <h2>
                               Loan art
                         </h2>
@@ -23,7 +23,7 @@
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                         <ul class="nav justify-content-end ">
                               <li class="nav-item">
-                                    <a class="nav-link colorA" href="./catalogo.html">inicio</a>
+                                    <a class="nav-link colorA" href="./index.html">inicio</a>
                               </li>
                               <li class="nav-item">
                                     <a class="nav-link colorA" href="./pages/carrito.html" id="enlaceCarrito">Carrito</a>
