agregue una funcion que calcula el precio total de todos los productos en el carrito en forma de list item abajo de todo del carrito, ahora los elementos del carrito se ven en forma de list item y no como etiquetas section, y depure un poco las funciones

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -34,6 +34,15 @@
       </nav>
 
       <main id="mainCarrito" class="mainCarrito">
+            <section class="container sectionCarrito">
+                  <ul class="list-group listaCarrito" id = "elementos">
+      
+                  </ul>
+            </section>
+            <section id="precioTotal" class="container sectionCarrito">
+                  
+            </section>
+
       </main>
 
       <footer class="footer">
